--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,9 @@
 
 
     </dependencies>
+    <build>
+             <defaultGoal>clean install</defaultGoal>
+             <finalName>EmbedCreator</finalName>
+    </build>
 
 </project>
